--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,29 +8,242 @@ on:
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
+    env:
+      TOXENV: py38
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: "${{ matrix.python }}"
-#     # 'Transformers::TravisCI::Scripts::Dependencies' dependencies are currently unsupported
     - name: Set up pip cache
       uses: actions/cache@v3.3.2
       with:
         path: "~/.cache/pip"
         key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
         restore-keys: "${{ runner.os }}-pip-"
-    - run: pip install codecov
-    - run: pip install tox
-    - run: tox -e $TOXENV
-    - run: tox -e coverage-report
-      if: "${{ success() }}"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install --upgrade pip setuptools
+    - run: pip --version
+    - run: pip install tox codecov
+    - run: tox --version
+    - run: tox
     - run: codecov
       if: "${{ success() }}"
-    strategy:
-      matrix:
-        exclude:
-        - arch: ppc64le
-          python: pypy-3.6
+  test_2:
+    runs-on: ubuntu-22.04
+    env:
+      TOXENV: py38
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install --upgrade pip setuptools
+    - run: pip --version
+    - run: pip install tox codecov
+    - run: tox --version
+    - run: tox
+    - run: codecov
+      if: "${{ success() }}"
+  test_3:
+    runs-on: ubuntu-22.04
+    env:
+      TOXENV: py38
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install --upgrade pip setuptools
+    - run: pip --version
+    - run: pip install tox codecov
+    - run: tox --version
+    - run: tox
+    - run: codecov
+      if: "${{ success() }}"
+  test_4:
+    runs-on: ubuntu-22.04
+    env:
+      TOXENV: py38
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install --upgrade pip setuptools
+    - run: pip --version
+    - run: pip install tox codecov
+    - run: tox --version
+    - run: tox
+    - run: codecov
+      if: "${{ success() }}"
+  test_5:
+    runs-on: ubuntu-22.04
+    env:
+      TOXENV: py38
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install --upgrade pip setuptools
+    - run: pip --version
+    - run: pip install tox codecov
+    - run: tox --version
+    - run: tox
+    - run: codecov
+      if: "${{ success() }}"
+  test_6:
+    runs-on: ubuntu-22.04
+    env:
+      TOXENV: py39
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install --upgrade pip setuptools
+    - run: pip --version
+    - run: pip install tox codecov
+    - run: tox --version
+    - run: tox
+    - run: codecov
+      if: "${{ success() }}"
+  test_7:
+    runs-on: ubuntu-22.04
+    env:
+      TOXENV: black
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install --upgrade pip setuptools
+    - run: pip --version
+    - run: pip install tox codecov
+    - run: tox --version
+    - run: tox
+    - run: codecov
+      if: "${{ success() }}"
+  test_8:
+    runs-on: ubuntu-22.04
+    env:
+      TOXENV: pep8py2
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install --upgrade pip setuptools
+    - run: pip --version
+    - run: pip install tox codecov
+    - run: tox --version
+    - run: tox
+    - run: codecov
+      if: "${{ success() }}"
+  test_9:
+    runs-on: ubuntu-22.04
+    env:
+      TOXENV: pep8py3
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install --upgrade pip setuptools
+    - run: pip --version
+    - run: pip install tox codecov
+    - run: tox --version
+    - run: tox
+    - run: codecov
+      if: "${{ success() }}"
+  test_10:
+    runs-on: ubuntu-22.04
+    env:
+      TOXENV: doc
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Set up pip cache
+      uses: actions/cache@v3.3.2
+      with:
+        path: "~/.cache/pip"
+        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
+        restore-keys: "${{ runner.os }}-pip-"
+    - uses: actions/setup-python@v5.0.0
+      with:
+        python-version: 3.8
+#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
+    - run: pip install --upgrade pip setuptools
+    - run: pip --version
+    - run: pip install tox codecov
+    - run: tox --version
+    - run: tox
+    - run: codecov
+      if: "${{ success() }}"
