--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,247 +3,21 @@ on:
   push:
     branches:
     - "**/*"
+    - main
+    - dev
   pull_request:
 #   # This item has no matching transformer
 #   maximum_number_of_builds: 0
 jobs:
   test:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38
+    runs-on: ubuntu-latest
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install --upgrade pip setuptools
-    - run: pip --version
-    - run: pip install tox codecov
-    - run: tox --version
-    - run: tox
-    - run: codecov
-      if: "${{ success() }}"
-  test_2:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install --upgrade pip setuptools
-    - run: pip --version
-    - run: pip install tox codecov
-    - run: tox --version
-    - run: tox
-    - run: codecov
-      if: "${{ success() }}"
-  test_3:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install --upgrade pip setuptools
-    - run: pip --version
-    - run: pip install tox codecov
-    - run: tox --version
-    - run: tox
-    - run: codecov
-      if: "${{ success() }}"
-  test_4:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install --upgrade pip setuptools
-    - run: pip --version
-    - run: pip install tox codecov
-    - run: tox --version
-    - run: tox
-    - run: codecov
-      if: "${{ success() }}"
-  test_5:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py38
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install --upgrade pip setuptools
-    - run: pip --version
-    - run: pip install tox codecov
-    - run: tox --version
-    - run: tox
-    - run: codecov
-      if: "${{ success() }}"
-  test_6:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: py39
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install --upgrade pip setuptools
-    - run: pip --version
-    - run: pip install tox codecov
-    - run: tox --version
-    - run: tox
-    - run: codecov
-      if: "${{ success() }}"
-  test_7:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: black
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install --upgrade pip setuptools
-    - run: pip --version
-    - run: pip install tox codecov
-    - run: tox --version
-    - run: tox
-    - run: codecov
-      if: "${{ success() }}"
-  test_8:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: pep8py2
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install --upgrade pip setuptools
-    - run: pip --version
-    - run: pip install tox codecov
-    - run: tox --version
-    - run: tox
-    - run: codecov
-      if: "${{ success() }}"
-  test_9:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: pep8py3
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install --upgrade pip setuptools
-    - run: pip --version
-    - run: pip install tox codecov
-    - run: tox --version
-    - run: tox
-    - run: codecov
-      if: "${{ success() }}"
-  test_10:
-    runs-on: ubuntu-22.04
-    env:
-      TOXENV: doc
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Set up pip cache
-      uses: actions/cache@v3.3.2
-      with:
-        path: "~/.cache/pip"
-        key: "${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}"
-        restore-keys: "${{ runner.os }}-pip-"
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install --upgrade pip setuptools
-    - run: pip --version
-    - run: pip install tox codecov
-    - run: tox --version
-    - run: tox
-    - run: codecov
-      if: "${{ success() }}"
+    - run: pip install --upgrade pip
+    - run: pip install numpy scipy matplotlib pandas sympy nose statsmodels tabulate
+    - run: pip install .
+    - run: nosetests
