--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
     - "**/*"
+    - main
   pull_request:
 #   # This item has no matching transformer
 #   maximum_number_of_builds: 0
@@ -10,104 +11,24 @@ jobs:
   test:
     runs-on: ubuntu-latest
     env:
-      TOXENV: py38
+      TOX_ENV: py38
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
     - run: pip install tox
-    - run: tox
+    - run: tox -e $TOX_ENV
   test_2:
     runs-on: ubuntu-latest
     env:
-      TOXENV: py38
+      TOX_ENV: py38
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
     - uses: actions/setup-python@v5.0.0
       with:
         python-version: 3.8
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
     - run: pip install tox
-    - run: tox
-  test_3:
-    runs-on: ubuntu-latest
-    env:
-      TOXENV: py39
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.9
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install tox
-    - run: tox
-  test_4:
-    runs-on: ubuntu-latest
-    env:
-      TOXENV: py310
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.1
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install tox
-    - run: tox
-  test_5:
-    runs-on: ubuntu-latest
-    env:
-      TOXENV: py311
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.11
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install tox
-    - run: tox
-  test_6:
-    runs-on: ubuntu-latest
-    env:
-      TOXENV: pep8
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.11
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install tox
-    - run: tox
-  test_7:
-    runs-on: ubuntu-latest
-    env:
-      TOXENV: docs
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.11
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install tox
-    - run: tox
-  test_8:
-    runs-on: ubuntu-latest
-    env:
-      TOXENV: packaging
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - uses: actions/setup-python@v5.0.0
-      with:
-        python-version: 3.11
-#     # 'sudo' was not transformed because there is no suitable equivalent in GitHub Actions
-    - run: pip install tox
-    - run: tox
+    - run: tox -e $TOX_ENV
